--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>//paprthin - quick look and make decision</title>
+    <title>//paprthin - glance at it!!</title>
       <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
       <%= javascript_include_tag "application" %>
       <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
@@ -22,7 +22,7 @@
             </ul>
             <ul class="pull-right">
               <% if logged_in? %>
-              <%= link_to "sign Out", logout_path %>
+              <%= link_to "sign out", logout_path %>
               <% else %>
               <%= link_to "sign in", login_path  %>
               <% end %>
