fixed devise sign in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
               <% if logged_in? %>
               <%= link_to "sign out", logout_path %>
               <% else %>
-              <%= link_to "sign in", login_path  %>
+              <%= link_to "sign in", new_user_session_path%>
               <% end %>
             </ul>
           </div>
