--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -14,6 +14,10 @@
   <%= column_chart Inventory.group(:name, :amount).count %>
   <p>Nobody likes doing <strong><%= link_to "Inventories", inventories_path %></strong>, but someone has to do it.</p>
 </div>
+<div class="col-md-4">
+  <%= pie_chart Post.group(:title).count %>
+  <p>Updates. News. <strong><%= link_to "Post", posts_path %></strong> them here.</p>
+</div>
 <hr>
 
 
