--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,12 @@
-<h2>Sign up</h2>
+<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => 'form-signin' }) do |f| %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {:class => 'form-horizontal' }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
-    <%= f.input :password_confirmation, required: true %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
+<h2 class="text-center">Sign Up</h2>
+<%= f.error_notification %>
+    <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "Email", input_html: {class: "form-control"} %>
+    <%= f.input :password, required: true, label: false, placeholder: "password", hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+    <%= f.input :password_confirmation, required: true, label: false, placeholder: "confirm password", input_html: {class: "form-control"} %>
+    <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block" %>
+    <%= render "devise/shared/links" %>
 <% end %>
 
-<%= render "devise/shared/links" %>
+
