--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -18,7 +18,11 @@
   <%= pie_chart Post.group(:title).count %>
   <p>Updates. News. <strong><%= link_to "Post", posts_path %></strong> them here.</p>
 </div>
-<hr>
-
+<% if logged_in? %>
+  <div class="col-md-4">
+    <%= pie_chart Log.group(:event).count %>
+    <p>Something happened? <strong><%= link_to "Log", logs_path %></strong> them here.</p>
+  </div>
+<% end %>
 
 
