--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,7 +3,8 @@
 <h2 class="text-center">Sign Up</h2>
 <%= f.error_notification %>
     <%= f.input :email, required: true, autofocus: true, label: false, placeholder: "email", input_html: {class: "form-control"} %>
-    <%= f.input :password, required: true, label: false, placeholder: "password", hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+    <%= f.input :password, required: true, label: true, placeholder: "password", hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+    <%= f.input :password_confirmation, required: true, label: false, placeholder: "Password Confirmation", input_html: {class: "form-control"} %>
     <%= f.button :submit, "Sign up", class: "btn btn-primary btn-block" %>
     <%= render "devise/shared/links" %>
 <% end %>
