configuring AWS with paperclip

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -16,6 +16,9 @@
      <%= f.file_field :image %>
     </div>
     <div>
+     <%= f.input :resource %>
+   </div>
+    <div>
      <%= f.label :remote_image_url, "or image URL" %>
      <%= f.text_field :remote_image_url %>
     </div>
