--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,10 @@
  @import "bootstrap";
  @import "bootstrap-responsive";
 
+ .text-center {
+
+ }
+
 table {
   width: 325px;
   cell-spacing: 10px;
