--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <center><h3><strong>order.backout.inventory</strong><h3></center>
+  <h3 class="text-center">order.backout.inventory.</h3>
 </div>
 <hr>
 <div class="col-md-4">
