month of backout

--- a/app/views/backouts/_form.html.erb
+++ b/app/views/backouts/_form.html.erb
@@ -1,5 +1,9 @@
 <div class="col-md-4">
   <%= form_for @backout do |f| %>
+  <div class="control-group">
+    <%= f.label :month %>
+    <%= f.text_field :month %>
+  </div>
   <table>
     <tr>
       <td>
