--- a/app/views/goods/_form.html.erb
+++ b/app/views/goods/_form.html.erb
@@ -6,8 +6,8 @@
   </div>
   <br/>
   <div class="control-group>">
-    <%= f.label :quantity %>
-    <%= f.text_field :quantity %>
+    <%= f.label :price %>
+    <%= f.text_field :price %>
   </div>
   <br/>
   <div class="control-group">
