--- a/app/views/goods/show.html.erb
+++ b/app/views/goods/show.html.erb
@@ -2,10 +2,10 @@
   <ul>
     <h4><li><%= @good.name %></li></h4>
     <li><%= @good.description %></li>
-    <li><%= @good.price %></li>
+    <li><%= number_to_currency(@good.price) %></li>
     <li><%= @good.unit %></li>
     <br/>
-    <% if logged_in? %>
+    <% if current_sucker %>
       <%= link_to "Edit", edit_good_path %>
       <%= link_to 'Delete', good_path, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
