--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,28 +1,37 @@
-<div class="col-md-12">
-  <h3 class="text-center">order.backout.inventory.</h3>
+<div class="jumbotron">
+  <div class="container">
+    <div class="col-md-12">
+      <h3 class="text-center">order//backout//inventory</h3>
+    </div>
+  </div>
 </div>
-<hr>
 <div class="col-md-4">
   <%= line_chart Request.group(:name, :created_at).count %>
     <p>Only <strong><%= link_to "Order", distributors_path %></strong> from the list of the items that you want. You can also see <strong><%= link_to "Past Orders", requests_path %></strong>.</p>
 </div>
 <div class="col-md-4">
-  <%= pie_chart Backout.group(:month, :item1, :amount1, :item2, :amount2, :item3, :amount3).count %>
+  <%= pie_chart Backout.group(:month).count %>
   <p>No inventory is complete without <strong><%= link_to "Backouts", backouts_path %></strong>. Make sure you count them right.<p>
 </div>
 <div class="col-md-4">
   <%= column_chart Inventory.group(:name, :amount).count %>
   <p>Nobody likes doing <strong><%= link_to "Inventories", inventories_path %></strong>, but someone has to do it.</p>
 </div>
-<div class="col-md-4">
-  <%= pie_chart Post.group(:title).count %>
-  <p>Updates. News. <strong><%= link_to "Post", posts_path %></strong> them here.</p>
-</div>
 <% if current_sucker %>
+  <div class="col-md-4">
+    <%= pie_chart Post.group(:title).count %>
+    <p>Updates. News. <strong><%= link_to "Post", posts_path %></strong> them here.</p>
+  </div>
   <div class="col-md-4">
     <%= pie_chart Log.group(:event).count %>
     <p>Something happened? <strong><%= link_to "Log", logs_path %></strong> it here.</p>
   </div>
 <% end %>
+<hr>
+<footer class="footer">
+  <div class="col-md-12">
+    <center><h6>built by &#0153;Seasalt Labs</h6></center>
+  </div>
+</footer>
 
 
