--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,9 +1,7 @@
 <div class="jumbotron">
-  <div class="container">
     <div class="col-md-12">
-      <h3 class="text-center">order//backout//inventory</h3>
+      <p class="text-center">order//backout//inventory</p>
     </div>
-  </div>
 </div>
 <div class="col-md-4">
   <%= line_chart Request.group(:name, :created_at).count %>
