--- a/app/views/goods/index.html.erb
+++ b/app/views/goods/index.html.erb
@@ -1,10 +1,8 @@
 <div class="col-md-12">
     <h3 class="text-center">
       <ul>
-        <li>|| order</li>
-        <li>backout //<li>
-        <li>inventory //</li>
-        <li>|| event </li>
+        <li>Order || Inventory</li>
+        <li>Backout // Event</li>
       <ul>
     </h3>
 </div>
