--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @tip do |form| %>
-<%= f.label :month %>
-<%= f.text_field :month %>
-<%= f.label :week %>
-<%= f.text_field :week %>
-<%= f.submit "Submit", class: "btn btn-primary" %>
+<%= form.label :month %>
+<%= form.text_field :month %>
+<%= form.label :week %>
+<%= form.text_field :week %>
+<%= form.submit "Submit", class: "btn btn-primary" %>
 <% end %>
