started food rating

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -58,8 +58,9 @@ form input[type='text'] {
  }
 
  body {
-  padding-top: 70px;
+  padding-top: 80px;
   padding-bottom: 10px;
+  padding-left: 25
  }
 
  li {
