--- a/app/views/tips/_form.html.erb
+++ b/app/views/tips/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @tip do |form| %>
-<%= form.label :month %>
+<%= f.label :month %>
 <%= form.text_field :month %>
 <%= form.label :week %>
 <%= form.text_field :week %>
